# winter2024-cocotbext-cocotb-vip-template

./: .copier-answers.yml  .coverage-tmp.html  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  duties.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
changelog/: index.html
code_of_conduct/: index.html
config/: ruff.toml
contributing/: index.html
credits/: index.html
dev/: index.html
docs/: dev.md
license/: index.html
reference/SUMMARY/: index.html
reference/cocotb_vip_templates/: index.html
reference/cocotb_vip_templates/bus/: index.html
reference/cocotb_vip_templates/config/: index.html
reference/cocotb_vip_templates/debug/: index.html
reference/cocotb_vip_templates/driver/: index.html
reference/cocotb_vip_templates/driver_master/: index.html
reference/cocotb_vip_templates/driver_slave/: index.html
reference/cocotb_vip_templates/monitor/: index.html
scripts/: gen_credits.py
search/: search_index.json
src/cocotb_vip_templates/: __init__.py  bus.py  config.py  debug.py  driver.py  driver_master.py  driver_slave.py  monitor.py
tests/: Makefile  __init__.py
