[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cocotb-vip-templates"
description = "Template file for creation of cocotb VIP"
authors = [{name = "Vijayvithal Jahagirdar", email = "jahagirdar.vs@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "cocotb>=1.9.1",
    "cocotb-bus>=0.2.1",
]

[project.urls]
Homepage = "https://dyumnin-interns.github.io/cocotb-vip-templates"
Documentation = "https://dyumnin-interns.github.io/cocotb-vip-templates"
Changelog = "https://dyumnin-interns.github.io/cocotb-vip-templates/changelog"
Repository = "https://github.com/dyumnin-interns/cocotb-vip-templates"
Issues = "https://github.com/dyumnin-interns/cocotb-vip-templates/issues"
Discussions = "https://github.com/dyumnin-interns/cocotb-vip-templates/discussions"
Gitter = "https://gitter.im/dyumnin-interns/cocotb-vip-templates"
Funding = "https://github.com/sponsors/jahagirdar"

[project.scripts]
cocotb-vip-templates = "cocotb_vip_templates.cli:main"

[tool.pdm]
version = {source = "scm"}
plugins = [
    "pdm-multirun",
]

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.10"]
precommit=["pre-commit>=3.7.1"]
ci-quality = ["cocotb-vip-templates[duty,docs,quality,typing,security,precommit]"]
ci-tests = ["cocotb-vip-templates[duty,tests]"]
docs = [
    "black>=23.9",
    "markdown-callouts>=0.3",
    "markdown-exec>=1.7",
    "mkdocs>=1.5",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-committers-plugin-2>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.4",
    "mkdocs-minify-plugin>=0.7",
    "mkdocstrings[python]>=0.23",
    "tomli>=2.0; python_version < '3.11'",
]
maintain = [
    "black>=23.9",
    "blacken-docs>=1.16",
    "git-changelog>=2.3",
]
quality = [
    "ruff>=0.0",
]
tests = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.3",
]
typing = [
    "mypy>=1.5",
    "types-markdown>=3.5",
    "types-pyyaml>=6.0",
]
security = [
    "safety>=2.3",
]
